--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "chip8-rs"
+name = "chip8_rs"
 version = "0.1.0"
 edition = "2018"
 
@@ -8,3 +8,5 @@ edition = "2018"
 [dependencies]
 rand = "0.8"
 minifb = "0.19.3"
+chrono = "0.4"
+clap = {version = "2.33.3", features = ["yaml"]}
